<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="account_data">Dados da conta</string>
    <string name="account_access">Acesso</string>
    <string name="account_full_name">Nome completo</string>
    <string name="account_first_name">Nome</string>
    <string name="account_last_name">Sobrenome</string>
    <string name="account_cpf">CPF</string>
    <string name="account_birth_date">Data de nascimento</string>
    <string name="account_email">E-mail</string>
    <string name="account_password">Senha</string>
    <string name="account_password_mask">**************</string>
    <string name="account_role">Cargo:</string>
    <string name="account_market">Mercado:</string>
    <string name="account_name_label">Nome:</string>
    <string name="account_restocks">Reposições:</string>
    <string name="account_damages">Avarias</string>
    <string name="account_not_informed">Não informado</string>
    <string name="account_unavailable_count">—</string>
    <string name="account_edit_profile">Editar perfil</string>
    <string name="account_edit_name">Editar nome</string>
    <string name="account_edit_email">Alterar e-mail</string>
    <string name="account_edit_password">Alterar senha</string>
    <string name="account_current_password">Senha atual</string>
    <string name="account_new_password">Nova senha</string>
    <string name="account_confirm_password">Confirmar nova senha</string>
    <string name="account_new_email">Novo e-mail</string>
    <string name="account_save">Salvar</string>
    <string name="account_verify_email">Enviar confirmação</string>
    <string name="account_cancel">Cancelar</string>
    <string name="account_email_instructions">Confirme sua senha atual. O novo e-mail será usado após a confirmação do link recebido.</string>
    <string name="account_saving">Atualizando sua conta…</string>
    <string name="account_actions_unavailable">Não foi possível iniciar a edição. Tente novamente.</string>
    <item name="account_profile_edit" type="id" />
    <item name="account_profile_summary" type="id" />
    <item name="account_security_data" type="id" />
    <item name="account_edit_name" type="id" />
    <item name="account_edit_email" type="id" />
    <item name="account_edit_password" type="id" />
    <item name="account_form_name" type="id" />
    <item name="account_form_last_name" type="id" />
    <item name="account_form_email" type="id" />
    <item name="account_form_current_password" type="id" />
    <item name="account_form_new_password" type="id" />
    <item name="account_form_confirmation" type="id" />
    <item name="account_form_error" type="id" />
</resources>
